--- a/style.css
+++ b/style.css
@@ -1,70 +1,228 @@
-:root {
-    --primary-color: #F4CE01;
-    --secondary-color: #0F0F0B;
-}
+/*          ORGANIZAÇÃO
+    
+    1º Tamanho, formatos, paddings, margens,etc;
+    2º Cores, sombras, degradês,etc
+    3º Posição. display. justify-content
+    4º Outros.
 
-* {
-    margin: 0;
+*/
+
+*, ::before, ::after {  
     padding: 0;
+    margin: 0%;
     box-sizing: border-box;
 }
-html {
-    font-size: 62.5%;
+
+:root {
+    --cor-1: #18161f;
+    --cor-2: #242030;
+    --cor-3: #7b68ee;
+    --cor-4: #c0b5ff;
 }
 
 body {
-    background-color: var(--primary-color);
-    font: bold 2rem 'Open Sans', sans-serif;
+    background-color: #242030;
+    
+    overflow-x: hidden;
+    
+    font-family: 'Average Sans', sans-serif;
+}
+
+
+/* header */
+
+nav {
+    height: 8vh;
+    
+    background-color: var(--cor-1);
+    box-shadow: 0px 5px 10px #000;
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    font-size: 20px;
+    letter-spacing: 3px;
+    margin-left: 5px;
+    
+    color: var(--cor-3);
+    
+    text-align: left;
+    transition: ease-out 0.2s;
+}
+
+.logo:hover {
+    color: var(--cor-4);
+}
+
+.nav-list {
+    list-style: none;
+    display: flex;
+}
+
+.nav-list li {
+    letter-spacing: 3px;
+    margin-left: 30px;
+    
+    transition: 0.3s;
+}
+
+.nav-list a:hover {
+    opacity: 0.6;
+}
+
+nav a{ 
+    color: #fff;
+    text-decoration: none;    
+}
+
+
+/* MENU HAMBURGUER */
+
+.mobile-menu {
+    display: none;
+    cursor: pointer;
+}
+  
+.mobile-menu div {
+    width: 32px;
+    height: 2px;
+    margin: 8px;
+
+    background: #fff;
+
+    transition: 0.3s;
+}
+  
+@media (max-width: 999px) {
+    
+    body {
+      overflow-x: hidden;
+    }
+
+    .nav-list {
+        z-index: 1;
+        top: 8vh;
+        right: 0;
+        width: 35vw;
+        height: 92vh;
+        
+        background-color: var(--cor-1); 
+        box-shadow: 4px 5px 5px 3px #000;
+        
+        position: absolute;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in;
+    }
+
+    .nav-list li {
+        margin-left: 0;
+        opacity: 0;
+    }
+
+    .mobile-menu {
+        display: block;
+    }
+}
+  
+.nav-list.active {
+    transform: translateX(0);
+}
+  
+@keyframes navLinkFade {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+}
+  
+.mobile-menu.active .line1 {
+    transform: rotate(-45deg) translate(-8px, 8px);
+}
+  
+.mobile-menu.active .line2 {
+    opacity: 0;
+}
+  
+.mobile-menu.active .line3 {
+    transform: rotate(45deg) translate(-5px, -7px);
 }
 
 .todo {
-    display: flex;
     width: 50vw;
+    gap: 15px;
+    margin: 0 auto;
+
+    display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 auto;
-    gap: 15px;
 }
 
 .todo__title {
-    display: flex;
-    background-color: var(--secondary-color);
+    font-size: 50px;
     width: 100%;
     height: 80px;
+    margin-top: 50px;
+    
+    color: var(--cor-4);
+    
+    display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
-    box-shadow: 1px 1px 5px var(--secondary-color);
-    font-size: 3rem;
-    color: var(--primary-color);
+}
+
+.todo__title::before,
+.todo__title::after {
+    content: '';
+    height: 20px;
+    width: 20px;
+    border-radius: 100%;
+    margin: 0 10px;
+    background-color: var(--cor-4);
 }
 
 .todo__list {
-    display: flex;
     width: 100%;
-    flex-direction: column;
     gap: 10px;
+
+    display: flex;
+    flex-direction: column;
 }
 
 .todo__item{
-    display: flex;
     width: 100%;
-    height: 60px;
+    height: 55px;
+    padding: 5px;
+    border-radius: 10px;
+    
+    color: #fff;
+    background-color: var(--cor-1);
+    box-shadow: 0px 3px 5px #000;
+
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px;
-    box-shadow: 1px 1px 5px var(--secondary-color);
-}
-.todo__item > div {
-    width: 80%;
-}
-.todo__item:hover {
+    transition: 0.1s ease-out;
     cursor: pointer;
-    transition: all .5s ease;
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
 }
 
+.todo__item > div {
+    width: 85%;
+}
+
+.todo__item:hover {
+    font-weight: bolder;
+}
 
 .todo__item > input[type='text'] {
     border: none;
@@ -72,39 +230,45 @@ body {
     font: inherit;
 }
 
-.todo__item > input[type='button'],
+.todo__item > img[id='lixeira'],
 .todo__item > input[type='checkbox'] {
-    width: 30px;
-    height: 30px;
-    font: inherit;
+    width: 20px;
+    height: 20px;
+    margin: 0 10px;
+    filter: invert(100%);
 }
-
 
 .todo__item > input[type='checkbox']:checked  + div {
     text-decoration:line-through;
 }
 
 .todo__new-item{
-    display: flex;
-    background-color: #fff59d;
     width: 100%;
     height: 70px;
-    justify-content: space-evenly;
-    padding: 10px 0;
-    box-shadow: 1px 1px 5px var(--secondary-color);
     margin: 10px;
+    padding: 10px 0;
+    border-radius: 10px;
+
+    background-color: var(--cor-4);
+    box-shadow: 0px 3px 5px #000;
+
+    display: flex;
     font: inherit;
+    justify-content: space-evenly;
 }
 
 .todo__new-item > input{
-    background-color: #fff59d;
-    border: none;
     width: 80%;
+    border: none;
+
+    background-color: var(--cor-4);
+
     outline: none;
     font: inherit;
 }
 
 .todo__new-item > input::placeholder {
+    text-align: center;
     font-style: italic;
     font-weight: normal;
 }
