--- a/style.css
+++ b/style.css
@@ -158,6 +158,9 @@ nav a{
     transform: rotate(45deg) translate(-5px, -7px);
 }
 
+
+/* COMEÇO DA TODO  */
+
 .todo {
     width: 50vw;
     gap: 15px;
@@ -170,8 +173,6 @@ nav a{
 
 .todo__title {
     font-size: 50px;
-    width: 100%;
-    height: 80px;
     margin-top: 50px;
     
     color: var(--cor-4);
@@ -201,7 +202,7 @@ nav a{
 
 .todo__item{
     width: 100%;
-    height: 55px;
+    min-height: 55px;
     padding: 5px;
     border-radius: 10px;
     
@@ -218,10 +219,12 @@ nav a{
 
 .todo__item > div {
     width: 85%;
+    font-size: 18px;
 }
 
 .todo__item:hover {
-    font-weight: bolder;
+    font-weight: 900;
+    
 }
 
 .todo__item > input[type='text'] {
@@ -229,6 +232,7 @@ nav a{
     width: 80%;
     font: inherit;
 }
+
 
 .todo__item > img[id='lixeira'],
 .todo__item > input[type='checkbox'] {
@@ -244,31 +248,72 @@ nav a{
 
 .todo__new-item{
     width: 100%;
-    height: 70px;
     margin: 10px;
-    padding: 10px 0;
-    border-radius: 10px;
-
-    background-color: var(--cor-4);
-    box-shadow: 0px 3px 5px #000;
-
+    
     display: flex;
     font: inherit;
-    justify-content: space-evenly;
+    align-items: center;
 }
 
-.todo__new-item > input{
-    width: 80%;
-    border: none;
-
+.todo__new-item > input[type="text"]{
+    width: 90%;
+    min-height: 70px;
+    padding: 0 10px;
+    border-radius: 10px 0 0 10px;
+    
     background-color: var(--cor-4);
+    box-shadow: 0px 3px 5px #000;
+    
+    border: none;
+    outline: none;
+    font: inherit;
+}
 
+.todo__new-item > input[type="button"]{
+    width: 20%;
+    min-height: 70px;
+    border-radius: 0 10px 10px 0;
+    
+    color: #fff;
+    background-color: var(--cor-3);
+    box-shadow: 0 2px 5px #000;
+    
+    border: none;
+    cursor: pointer;
     outline: none;
     font: inherit;
 }
 
 .todo__new-item > input::placeholder {
+    font-size: 20px;
     text-align: center;
     font-style: italic;
     font-weight: normal;
+}
+
+@media (max-width: 900px) {
+    .todo__title {
+       width: 100vw;
+    }
+    
+    .todo__item {
+        width: 70vw;
+        align-self: center;
+    }
+
+    .todo__new-item {
+        flex-direction: column;
+        align-self: center;
+    }
+
+    .todo__new-item > input[type="text"] {
+        width: 70vw;
+        border-radius: 10px;
+    }
+
+    .todo__new-item > input[type="button"] {
+        width: 35vw;
+        margin-top: 5px;
+        border-radius: 10px;
+    }
 }
