--- a/style.css
+++ b/style.css
@@ -193,14 +193,35 @@ nav a{
 }
 
 .todo__list {
+    height: 55vh;
     width: 100%;
-    gap: 10px;
+    padding: 15px;
+    border-radius: 10px;
+    gap: 11px;
 
-    display: flex;
+    border: solid 2px var(--cor-1);
+    background-color:#c0b5ff44;
+    
+    overflow-y: scroll;
+    overflow-x: hidden;
     flex-direction: column;
+    display: flex;
 }
 
-.todo__item{
+/* BARRA DE ROLAGEM-todo_list */
+
+.todo__list::-webkit-scrollbar {
+    width: 6px;
+    background: var(--cor-1);
+}
+
+
+.todo__list::-webkit-scrollbar-thumb {
+    background-color: #fff;
+    border-radius: 10px; 
+}
+
+.todo__item {
     width: 100%;
     min-height: 55px;
     padding: 5px;
@@ -296,6 +317,9 @@ nav a{
        width: 100vw;
     }
     
+    .todo__list {
+        width: 80vw;
+    }
     .todo__item {
         width: 70vw;
         align-self: center;
